# federation-graphql-rust

./: .drone.yml  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  workspace.json
accounts-service/: Cargo.toml  docker-compose.yml
accounts-service/.docker/init/: 01-casbin_rules.sql
accounts-service/src/: main.rs
accounts-service/src/authentication/: hasher.rs  routes.rs
accounts-service/src/authorization/: routes.rs
accounts-service/src/graphql/: query.rs  routes.rs  schema.rs
accounts-service/src/models/: action.rs  mod.rs  object.rs  permission.rs  permission_query.rs  role.rs  user.rs
acpm-service/: Cargo.toml  docker-compose.yml
acpm-service/.docker/: acpm-service.dockerfile  postgres.dockerfile
acpm-service/.docker/init/: 01-casbin_rules.sql  02-clients.sql
acpm-service/environments/: development.yaml  testing.yaml
acpm-service/environments/access_model/: rbac_model.conf
acpm-service/src/: config.rs  main.rs
acpm-service/src/middlewares/: basic_auth.rs  mod.rs
acpm-service/src/migrations/: 01_casbin_rules.sql  02_clients.sql
acpm-service/src/models/: add_user_to_role.rs  auth_client.rs  mod.rs  permission_query.rs  rbac.rs
acpm-service/src/routes/: authorization.rs  mod.rs
benchmark/: bench.yaml  config.query.yaml  createCoffee.mutation.graphql  docker-compose.yml  hasura-graphql-bench.dockerfile  queries.graphql
gateway/: .eslintrc.js  .prettierrc.js  package-lock.json  package.json  tsconfig.json
gateway/.docker/: gateway.dockerfile
gateway/src/: index.js  index.ts
gateway/src/config/: index.js  index.ts
gateway/src/graphql/: schema.ts
identity-service/: Cargo.toml
identity-service/.docker/: identity-service.dockerfile
identity-service/environments/: development.yaml
identity-service/src/: config.rs  main.rs
identity-service/src/authentication/: hasher.rs  mod.rs  routes.rs
identity-service/src/errors/: custom_error.rs
identity-service/src/graphql/: query.rs  routes.rs  schema.rs
identity-service/src/models/: mod.rs  role.rs  user.rs
products-service/: .dockerignore  Cargo.toml  docker-compose.yml
products-service/.docker/: products-service.dockerfile
products-service/environments/: development.yaml  testing.yaml
products-service/src/: config.rs  main.rs
products-service/src/authorization/: guard.rs  mod.rs
products-service/src/graphql/: mod.rs  query.rs  routes.rs  schema.rs
products-service/src/models/: coffee.rs  mod.rs  user.rs
products-service/src/utils/: http_client.rs
subscription-service/: Cargo.toml
subscription-service/.docker/: subscription-service.dockerfile
subscription-service/src/: config.rs  main.rs
subscription-service/src/graphql/: mod.rs  query.rs  routes.rs  schema.rs
subscription-service/src/models/: coffee.rs  mod.rs
