[package]
name = "acpm-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Server
actix-web = { version = "3.2.0", default-features = false }
# Basic auth
actix-web-httpauth = "0.5.0"
# Serialization/Deserialization
serde = "1.0.117"
# OpenAPI specification with Actix
paperclip = { git = "https://github.com/wafflespeanut/paperclip.git", features = ["actix3-nightly"] }
# Authorization enforcer policies with Adapter for SQLx
sqlx-adapter = { version = "0.3.0", default-features = false, features = ["postgres", "runtime-tokio", "offline"] }
# SQLx
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
# Config
config = { version = "0.10.1", features = ["yaml"] }
# Lazy evaluation
lazy_static = "1.4.0"
# Logging
log = "0.4.11"
pretty_env_logger = "0.4.0"
