[package]
name = "identity-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Client
actix-web = "^3.0.2"
# Session adapter
actix-session = "^0.4.0"
# Redis Session
actix-redis = "^0.9.1"
# Serialization/Deserialization
serde = "^1.0.116"
