[package]
name = "identity-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Server
actix-web = "3.2.0"
# Session adapter
actix-session = "0.4.0"
# Redis Session
actix-redis = "0.9.1"
# Serialization/Deserialization
serde = "1.0.117"
# Json specific Serialization/Deserialization
serde_json = "1.0.59"
# Argon password hashing
# argonautica = "0.2.0"
rust-argon2 = "0.8.2"
# Cryptographically Secure Randomness
rand = "0.7.3"
# Evaluate some stuff only once
# lazy_static = "1.4.0"
# Mongo DB ODM (Should be merged soon)
wither = { git = "https://github.com/simoneromano96/wither.git", branch = "master" }
# OpenAPI specification with Actix
paperclip = { git = "https://github.com/wafflespeanut/paperclip.git", features = ["actix3-nightly", "actix-session"] }
# GraphQL implementation
async-graphql = { version = "2.0.9", features = ["apollo_tracing", "apollo_persisted_queries"] }
# GraphQL Actix Adapter
async-graphql-actix-web = "2.0.9"
config = "0.10.1"
lazy_static = "1.4.0"
# Authorization enforcer policies
# casbin = { version = "2.0.2", features = ["runtime-tokio"] }
