[package]
name = "identity-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Server
actix-web = "3.3.2"
# Session adapter
actix-session = "0.4.0"
# Redis Session
actix-redis = "0.9.1"
# Serialization/Deserialization
serde = "1.0.123"
# Json specific Serialization/Deserialization
serde_json = "1.0.61"
# Argon password hashing
# argonautica = "0.2.0"
rust-argon2 = "0.8.3"
# Cryptographically Secure Randomness
rand = "0.8.3"
# Evaluate some stuff only once
# lazy_static = "1.4.0"
# Mongo DB ODM (Should be merged soon)
wither = { git = "https://github.com/simoneromano96/wither.git", branch = "master" }
# OpenAPI specification with Actix
paperclip = { version = "0.5.0", features = ["actix3-nightly", "actix-session"] }
# GraphQL implementation
async-graphql = "2.5.1"
# GraphQL Actix Adapter
async-graphql-actix-web = "2.5.1"
config = "0.10.1"
lazy_static = "1.4.0"
# Logging
pretty_env_logger = "0.4.0"
log = "0.4.14"
# Authorization enforcer policies
# casbin = { version = "2.0.2", features = ["runtime-tokio"] }
