[package]
name = "products-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Server
actix-web = "^3.0.2"
# Session adapter
actix-session = "^0.4.0"
# Redis Session
actix-redis = "^0.9.1"
# Serialization/Deserialization
serde = "^1.0.116"
# Mongo DB ODM (Should be merged soon)
wither = { git = "https://github.com/simoneromano96/wither.git" }
# GraphQL implementation
async-graphql = { version = "^2.0.0-alpha.23", features = ["apollo_tracing"] }
# GraphQL Actix Adapter
async-graphql-actix-web = "2.0.0-alpha.23"
# Type-safe URLs
url = "2.1.1"
futures = "0.3.5"
