[package]
name = "products-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Server
actix-web = "^3.0.2"
# WebSocket extensions
actix-web-actors = "3.0.0"
# Session adapter
actix-session = "^0.4.0"
# Redis Session
actix-redis = "^0.9.1"
# Redis client (PUB SUB)
redis-async = "^0.6.3"
# Serialization/Deserialization
serde = "^1.0.116"
# JSON Serialization/Deserialization
serde_json = "1.0.59"
# Mongo DB ODM (Should be merged soon)
wither = { git = "https://github.com/simoneromano96/wither.git" }
# GraphQL implementation
async-graphql = { version = "^2.0.4", features = ["apollo_tracing"] }
# GraphQL Actix Adapter
async-graphql-actix-web = "^2.0.4"
# Type-safe URLs
url = { version = "^2.1.1", features = ["serde"]}
# Futures traits and methods
futures = "^0.3.5"
# HTTP Client
reqwest = { version = "^0.10.8", default-features = false, features = ["rustls-tls"] }
# Config
config = { version = "0.10.1", features = ["yaml"] }
# Evaluate config only once
lazy_static = "1.4.0"
# Loggers
pretty_env_logger = "0.4.0"
log = "0.4.11"
# Base64 encode/decode
base64 = "0.13.0"
