[package]
name = "products-service"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP Server
actix-web = "3.3.2"
# WebSocket extensions
# actix-web-actors = "3.0.0"
# Session adapter
actix-session = "0.4.0"
# Redis Session
actix-redis = "0.9.1"
# Redis client (PUB SUB)
# redis-async = "0.6.3"
# Redis client
redis = { version = "0.19.0", features = ["tokio-comp"] }
# Serialization/Deserialization
serde = "1.0.119"
# JSON Serialization/Deserialization
serde_json = "1.0.61"
# Mongo DB ODM (Should be merged soon)
wither = { git = "https://github.com/simoneromano96/wither.git" }
# GraphQL implementation
async-graphql = { version = "2.5.0", features = ["log", "tracing"] }
# GraphQL Actix Adapter
async-graphql-actix-web = "2.5.0"
# Type-safe URLs
url = { version = "2.2.0", features = ["serde"] }
# Futures traits and methods
futures = "0.3.12"
# HTTP Client
reqwest = { version = "0.10.0", default-features = false, features = ["rustls-tls"] }
# Config
config = { version = "0.10.1", features = ["yaml"] }
# Evaluate config only once
lazy_static = "1.4.0"
# Loggers
pretty_env_logger = "0.4.0"
log = "0.4.13"
# Base64 encode/decode
base64 = "0.13.0"
